# gaia

./: .gitignore  Pipfile  build.sh  build.spec  pyproject.toml  pytest.ini  requirements.txt
conf/: addict.ini  addict.json  app.ini  log.ini
gaia/: __main__.py  _test.py  addict.py  config.py  constants.py  cpdf.py  gaia.py  gaianew.py  infodata copy.py  infodata.py  ydtools.py
gaia.egg-info/: PKG-INFO  SOURCES.txt
gaia/conf/: log.ini
src/gaia/: config.py  gaia.py  ydutils.py
tests/: conftest.py  test_config.py  test_gaia.py
tests/unit/: test_config.py  test_gaia.py  test_ydutils.py
